# AdobeConnectDownloader

./: .gitignore  HOW_IT_WORKS.md  LICENSE  README.md  TASKS.md  acd.py  acd_fast.py  pyproject.toml
.github/workflows/: release.yml
acdl/: __init__.py  applog.py  cli.py  ffmpeg.py
acdl/core/: __init__.py  auth.py  content.py  discover.py  downloader.py  gateway.py  protocol.py
acdl/jobs/: __init__.py  manager.py  manifest.py  store.py
acdl/media/: __init__.py  compose.py  flv.py  whiteboard.py
acdl/ui/: __init__.py  server.py
acdl/ui/static/: app.js  index.html  style.css
docs/: PROTOCOL.md
packaging/: AdobeConnectDownloader.spec  launch.py
research/: FINDINGS.md  acd_test.py  acd_test2.py  diag.py  discover.py  dump_flv.py  har_replay.py  parallel_test.py  probe2.py  probe3.py  probe4.py  probe_ws.py  ramp_test.py  seqtest.py  seqtest2.py  ticket_test.py  trace.py  webcam_probe.py
